# audiorack

./: Makefile  README.txt
arPlayer4/: Makefile  arPlayer4  main.c
arRecorder4/: Makefile  arRecorder4  example.txt  main.c  test.conf
arServer4/: Makefile  arServer4  arserver.h  automate.c  automate.h  data.c  data.h  database.c  database.h  dispatch.c  dispatch.h  main.c  media.c  media.h  mix_engine  mix_engine.c  mix_engine.h  mixbuffers.c  mixbuffers.h  runifnot  session.c  session.h  tasks.c  tasks.h  tbd_c  utilities.c  utilities.h
arUI4/: Makefile  MySQL-ID-Transalation.txt  find-node-or-install  index.js  keepalive  library.js  package-lock.json  package.json  server.js  sipWsProxy.js  sse.js  studio.js  uiserver.js
arUI4/client/: asset-manifest.json  index.css  index.html  index.js  login.html  mcsWorker.js  remote.html  sseWorker.js  sseview.html  upload.html  vumeter.js
arUI4/client/control/: BCF2000.mjs  BEHRINGER_BCF2000.mjs  (+4 more)
docs/: ControleSurfaceREADME.odt  arRecorder4Example.txt  staticmount.txt
libdbi-drivers-0.9.0/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.encodings  README.osx  README.win32  TODO  acinclude.m4  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.in  libdbi-drivers.spec  libdbi-drivers.spec.in  libtool
libdbi-drivers-0.9.0/doc/: Makefile  Makefile.in
libdbi-drivers-0.9.0/doc/include/: Makefile  Makefile.in
libdbi-drivers-0.9.0/drivers/: Makefile  Makefile.am  Makefile.in
libdbi-drivers-0.9.0/drivers/db2/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  TODO  dbd_db2.c  dbd_db2.h  dbd_db2.sgml
libdbi-drivers-0.9.0/drivers/db2/dbd_db2/: c27.html  c30.html  c33.html  c36.html  f16.html  index.html
libdbi-drivers-0.9.0/drivers/firebird/: Makefile  Makefile.am  Makefile.in  dbd_firebird.c  dbd_firebird.sgml  utility.c
libdbi-drivers-0.9.0/drivers/freetds/: Makefile  Makefile.am  Makefile.in  dbd_freetds.c
libdbi-drivers-0.9.0/drivers/ingres/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  dbd_ingres.c  dbd_ingres.h  dbd_ingres.sgml
libdbi-drivers-0.9.0/drivers/ingres/dbd_ingres/: copying-fdl.html  f25.html  index.html  install-build.html  install-prereq.html  install.html  intro.html  options.html  specific.html
libdbi-drivers-0.9.0/drivers/msql/: Makefile  Makefile.am  Makefile.in  dbd_msql.c
libdbi-drivers-0.9.0/drivers/msql/dbd_msql/: c26.html  c30.html  c81.html  f15.html  index.html  x33.html  x47.html
libdbi-drivers-0.9.0/drivers/mysql/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  TODO  dbd_mysql.c  dbd_mysql.h  dbd_mysql.lo  dbd_mysql.sgml  libdbdmysql.la
libdbi-drivers-0.9.0/drivers/mysql/.deps/: dbd_mysql.Plo
libdbi-drivers-0.9.0/drivers/mysql/.libs/: libdbdmysql.la  libdbdmysql.lai
libdbi-drivers-0.9.0/drivers/mysql/dbd_mysql/: c101.html  c177.html  c180.html  c40.html  c43.html  c44.html  c47.html  c98.html  copying-fdl.html  f29.html  f32.html  index.html  x180.html  x183.html  x47.html  x50.html  x61.html  x64.html
libdbi-drivers-0.9.0/drivers/oracle/: Makefile  Makefile.am  Makefile.in  README  TODO  dbd_oracle.c  dbd_oracle.sgml
libdbi-drivers-0.9.0/drivers/oracle/dbd_oracle/: c26.html  c29.html  c38.html  c41.html  f15.html  index.html  x32.html  x35.html
libdbi-drivers-0.9.0/drivers/pgsql/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  TODO  dbd_pgsql.c  dbd_pgsql.h  dbd_pgsql.sgml
libdbi-drivers-0.9.0/drivers/pgsql/dbd_pgsql/: copying-fdl.html  f30.html  index.html  install-build.html  install-prereq.html  install.html  intro.html  options.html  specific.html
libdbi-drivers-0.9.0/drivers/sqlite/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  TODO  dbd_sqlite.c  dbd_sqlite.h  dbd_sqlite.sgml
libdbi-drivers-0.9.0/drivers/sqlite/dbd_sqlite/: c100.html  c136.html  c34.html  c45.html  copying-fdl.html  f23.html  index.html  x139.html  x215.html  x48.html  x62.html
libdbi-drivers-0.9.0/drivers/sqlite3/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  TODO  dbd_sqlite3.c  dbd_sqlite3.h  dbd_sqlite3.sgml
libdbi-drivers-0.9.0/drivers/sqlite3/dbd_sqlite3/: c134.html  c34.html  c47.html  c98.html  copying-fdl.html  f23.html  index.html  x137.html  x209.html  x50.html  x64.html
libdbi-drivers-0.9.0/tests/: Makefile  Makefile.am  Makefile.in  README  plugin_settings.sh  plugin_settings.sh.in  test_db2.sh  test_dbi.c  test_dbi.cfg  test_dbi.cfg.in  test_dbi_dlopen.c  test_dbi_plugin.c  test_firebird.sh  test_freetds.sh  test_ingres.sh  test_libdbi.sh  test_msql.sh  test_mysql.sh  test_oracle.sh  test_pgsql.sh  test_sqlite.sh  test_sqlite3.sh
libdbi-drivers-0.9.0/tests/cgreen/: Makefile  Makefile.am  Makefile.in
libdbi-drivers-0.9.0/tests/cgreen/cmake/CVS/: Entries  Repository
libdbi-drivers-0.9.0/tests/cgreen/cmake/Modules/CVS/: Entries  Repository
libdbi-drivers-0.9.0/tests/cgreen/contrib/CVS/: Entries  Repository
libdbi-drivers-0.9.0/tests/cgreen/contrib/SCons/CVS/: Entries  Repository
libdbi-drivers-0.9.0/tests/cgreen/contrib/automake/CVS/: Entries  Repository
libdbi-drivers-0.9.0/tests/cgreen/doc/CVS/: Entries  Repository
libdbi-drivers-0.9.0/tests/cgreen/doc/source/CVS/: Entries  Repository
libdbi-drivers-0.9.0/tests/cgreen/doc/source/include/CVS/: Entries  Repository
libdbi-drivers-0.9.0/tests/cgreen/doc/source/site/CVS/: Entries  Repository
libdbi-drivers-0.9.0/tests/cgreen/doc/tutorial_test/CVS/: Entries  Repository
libdbi-drivers-0.9.0/tests/cgreen/include/CVS/: Entries  Repository
libdbi-drivers-0.9.0/tests/cgreen/include/cgreen/CVS/: Entries  Repository
libdbi-drivers-0.9.0/tests/cgreen/samples/CVS/: Entries  Repository  Root
libdbi-drivers-0.9.0/tests/cgreen/tests/CVS/: Entries  Repository
support/: README.txt  arui_defconf.json  help.txt  mysql.dbi  mysql2.0.dbi  mysql2.1.dbi  mysql2.2.dbi  mysql2.3.dbi  mysql2.4.dbi  mysql2.5.dbi  mysql2.6.dbi  mysql2.7.dbi  mysql2.8.dbi  mysql4.0.dbi  root_startup.conf  user_startup.conf
support/templates/: default.rec  m4afile.rec  mp3file.rec  mp3shoutcast.rec  opusfile.rec  wavfile.rec
(+28 files in other folders)
