## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = foreign

noinst_LIBRARIES = libcgreen.a

INCLUDES = -Iinclude

libcgreen_a_SOURCES =  src/unit.c src/messaging.c src/breadcrumb.c src/reporter.c src/assertions.c src/vector.c src/mocks.c src/constraint.c src/parameters.c src/text_reporter.c src/cdash_reporter.c 

EXTRA_DIST = AUTHORS ChangeLog CMakeLists.txt ConfigureChecks.cmake COPYING CTestConfig.cmake DefineOptions.cmake INSTALL LICENSE NEWS README README.osx README.win32 TODO VERSION config.h.cmake cmake contrib doc include samples tests
